--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background: #aaa;
+}
+
 nav{
     height: 10vh;
     position: fixed;
@@ -39,4 +43,7 @@ nav div, nav ul li{
     border-radius: 15%;
     padding: 5px 20px;
 
+}
+header{
+    background: linear-gradient(90deg, #aaa, cyan);
 }
